friend-management/src/main/java/com/example/friendmanagement/error/GetAllFriendsException.java
package com.example.friendmanagement.error;

public class GetAllFriendsException extends RuntimeException {
    private Throwable throwable;

    public GetAllFriendsException(Throwable throwable) {
        this.throwable = throwable;
    }
}
